--- a/src/App.less
+++ b/src/App.less
@@ -8,8 +8,7 @@
 }
 
 .content-box {
-  border-top: 15px solid #f2f2f2;
-  border-left: 15px solid #f2f2f2;
+  border: 24px solid #f2f2f2;
   background-color: #fff;
   overflow-y: auto;
   .main-box {
